[package]
name = "dragula"
version = "0.1.0"
authors = ["Xavientois <joshua.rampersad@hotmail.com>"]
edition = "2018"
description = "Rust WASM wrapper for Dragula"
license = "MIT"
keywords = ["dragula", "frontend", "web"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1.6"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'HtmlElement',
  'HtmlCollection',
  'Window',
  'console'
]
