[package]
name = "dragula"
version = "0.1.0"
authors = ["Xavientois <joshua.rampersad@hotmail.com>"]
edition = "2018"
description = "Rust WASM wrapper for Dragula"
license = "MIT"
keywords = ["dragula", "frontend", "web"]
categories = ["gui", "wasm", "web-programming"]

[features]
default = ["js-sys"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.js-sys]
version = "0.3"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1.6"
js-sys = "0.3"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'HtmlElement',
  'HtmlCollection',
  'Window',
  'console'
]
